# aoc21

./: .gitignore  Cargo.toml
benches/: day_benches.rs
src/: aoc_error.rs  lib.rs  main.rs
src/days/: eight.rs  eighteen.rs  eleven.rs  five.rs  four.rs  fourteen.rs  mod.rs  nine.rs  one.rs  seven.rs  seventeen.rs  six.rs  sixteen.rs  ten.rs  thirteen.rs  three.rs  twelve.rs  twentyfour.rs  twentyone.rs  twentythree.rs  two.rs
