[package]
name = "aoc21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
lazy_static = "1.4"
petgraph = "0.6"
reqwest = { version = "0.11", features = [ "blocking" ] }
chrono = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "day_benches"
harness = false
